@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2215 2004/02/03 18:06:20 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.2216 2004/02/03 19:02:11 druzus Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2004-02-04 03:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
+  * source/vm/debug.c
+    + add wrappers for :
+      __VMSTKGLIST()
+      __VMSTKGCOUNT()
 
 2004-02-03 19:50 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
   * xharbour/source/rdd/dbfcdx/dbfcdx1.c
